language/move-lang/tests/move_check/translated_ir_tests/move/commands/else_assigns_if_doesnt.exp
error[E06002]: use of unassigned variable
   ┌─ tests/move_check/translated_ir_tests/move/commands/else_assigns_if_doesnt.move:11:12
   │
 4 │     let y;
   │         - The variable might not have a value due to this position. The variable must be assigned a value before being used
   ·
11 │     assert(y == 0, 42);
   │            ^ Invalid usage of variable 'y'

